# p2pchat

./: .gitignore  LICENSE  README.md  pyproject.toml
p2pchat/: __init__.py  __main__.py  app.py  chat.tcss  main.py
p2pchat/core/: account.py  backup.py  crypto.py  protocol.py  secure_delete.py  storage.py
p2pchat/core/delivery/: outbox.py
p2pchat/core/migrations/: 0001_initial.sql
p2pchat/core/network/: peer.py  server.py  session.py  yggdrasil.py
p2pchat/ui/: __init__.py  themes.py
p2pchat/ui/screens/: __init__.py  chat.py  contacts.py  unlock.py
p2pchat/ui/widgets/: __init__.py  chat_input.py  help_screen.py  invite_modal.py  message_list.py  status_bar.py
tests/: test_account.py  test_app.py  test_backup.py  test_chat_screen.py  test_crypto.py  test_help_screen.py  test_invite.py  test_network_security.py  test_outbox.py  test_peer.py  test_protocol.py  test_secure_delete.py  test_server.py  test_session.py  test_storage.py  test_themes.py  test_unlock_screen.py  test_widgets.py  test_yggdrasil.py
