[project]
name = "p2pchat"
version = "0.0.7"
description = ""
authors = [{ name = "onlyfanfuriks", email = "overhead.nerves@gmail.com" }]
requires-python = ">=3.13,<3.14"
dependencies = [
    "textual (==8.1.1)",
    "rich (==14.3.3)",
    "cryptography (==46.0.5)",
    "sqlcipher3 (==0.6.2)",
    "pyperclip (==1.11.0)",
    "aiofiles (==25.1.0)",
    "msgspec (==0.20.0)",
]

[dependency-groups]
dev = [
    "ruff (>=0.15.7,<0.16.0)",
    "pytest (==9.0.2)",
    "pytest-cov (==7.0.0)",
    "pytest-mock (==3.15.1)",
    "pytest-asyncio (==1.3.0)",
]

[project.scripts]
p2pchat = "p2pchat.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.poetry]
packages = [{ include = "p2pchat" }]
include = ["p2pchat/**/*.sql"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
